
SET(ProjectName "ElVisModelConversion")

# TODO - These should be handled by Nektar++Config.cmake
ADD_DEFINITIONS(-DNEKTAR_PLUS_PLUS_EXTENSION_EXPORTS -DNEKTAR_USING_BLAS -DNEKTAR_USING_LAPACK -DNEKTAR_MEMORY_POOL_ENABLED)

FIND_PACKAGE(Nektar++ REQUIRED NO_MODULE NO_DEFAULT_PATH NO_CMAKE_BUILDS_PATH NO_CMAKE_PACKAGE_REGISTRY)

IF( NEKTAR++_FOUND )
    SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR} ${NEKTAR++_ROOT_DIR} ${CMAKE_MODULE_PATH})
ENDIF()

SET(Headers
	DynamicLib.h
	IElVisModelConverter.h
) 

SET(Sources
	DynamicLib.cpp
	IElVisModelConverter.cpp
)


INCLUDE_DIRECTORIES(${NEKTAR++_INCLUDE_DIRS})

LINK_DIRECTORIES(${NEKTAR++_LIBRARY_DIRS})
ADD_ELVIS_STATIC_LIBRARY(${ProjectName} ${Headers}
	${Sources} )

TARGET_LINK_LIBRARIES(${ProjectName} 
    ${Boost_FILESYSTEM_LIBRARY}
    ${Boost_SYSTEM_LIBRARY}
)

SET_TARGET_PROPERTIES(${ProjectName} PROPERTIES VERSION ${ELVIS_VERSION})

INSTALL(FILES ${Headers} DESTINATION ${ELVIS_INCLUDE_DIR}/ElVisModelConversion)




